# KaspaDev-KaspaCom-Gateway-Data

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  GRAPHQL_TESTING.md  LICENSE  README-API.md  README.md  config.yaml  docker-compose.yml  envoy.yaml  openapi.json  run-dev.sh  run-prod.sh  start.sh  tailwind.config.js
benches/: api_benchmarks.rs
dashboard/: index.html  krcbot-dashboard.js  system_logic.js  theme.css
data/: tokens_config.json
src/: lib.rs  main.rs
src/api/: doc.rs  graphql.rs  handlers.rs  kaspacom_handlers.rs  mod.rs  routes.rs  state.rs
src/application/: cache_service.rs  exchange_index.rs  kaspacom_service.rs  kaspacom_service_test.rs  mod.rs  service.rs  ticker_service.rs
src/domain/: kaspacom_models.rs  mod.rs
src/infrastructure/: github.rs  kaspacom_client.rs  local_file.rs  mod.rs  parquet_store.rs  rate_limiter.rs  redis.rs
src/mcp/: server.rs
tests/: graphql_test.sh
tests/integration/: graphql_test.rs  rest_api_test.rs
