[package]
name = "krcbot-kaspacom-gatewayapi"
version = "0.1.0"
edition = "2021"

# Break out of parent workspace
[workspace]

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "timeout", "set-header"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
base64 = "0.21"
serde_yaml = "0.9.34"
redis = { version = "0.24", features = ["tokio-comp"] }
deadpool-redis = "0.18"
async-trait = "0.1.89"
anyhow = "1.0.100"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
tokio-retry = "0.3"
# Phase 2 dependencies
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
validator = { version = "0.19", features = ["derive"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
# GraphQL support
async-graphql = "7.0"
async-graphql-axum = "7.0"
# MCP protocol support (JSON-RPC 2.0)
jsonrpc-core = "18.0"
jsonrpc-derive = "18.0"

# Parquet/Arrow for local cache storage (heavy-cache layer)
parquet = { version = "55.0", features = ["async"] }
arrow = { version = "55.0", features = ["prettyprint"] }
arrow-json = "55.0"
arrow-schema = "55.0"

[dev-dependencies]
mockall = "0.14.0"
tempfile = "3.10"
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "api_benchmarks"
harness = false

